--- a/index.html
+++ b/index.html
@@ -3,48 +3,50 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Aprenda Python</title>
+  <title>Automatize com Python</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
-    <h1>Aprenda Python</h1>
-<nav>
+    <h1>Automatize com Python</h1>
+    <nav>
       <ul class="menu">
         <li><a href="#inicio">Início</a></li>
         <li><a href="#sobre">Sobre</a></li>
-        <li><a href="#recursos">Recursos</a></li>
+        <li><a href="#recursos">Exemplos</a></li>
         <li><a href="#contato">Contato</a></li>
       </ul>
     </nav>
   </header>
 
-  <section id="inicio">
-    <h2>Bem-vindo ao site sobre Python</h2>
-    <p>Python é uma linguagem de programação poderosa, fácil de aprender e muito versátil. Ideal para iniciantes e profissionais.</p>
-  </section>
+  <main>
+    <section id="inicio">
+      <h2>Bem-vindo ao site de automação com Python</h2>
+      <p>Python é perfeito para automatizar tarefas repetitivas como renomear arquivos, enviar e-mails e muito mais.</p>
+    </section>
 
-  <section id="sobre">
-    <h2>Sobre o Python</h2>
-    <p>Python é usado em diversas áreas como ciência de dados, web, automação, IA, entre outros. Sua sintaxe simples permite foco na lógica.</p>
-  </section>
+    <section id="sobre">
+      <h2>Por que usar Python para automação?</h2>
+      <p>Com poucas linhas de código, você pode criar scripts para economizar horas de trabalho. Python tem bibliotecas como <code>os</code>, <code>shutil</code>, <code>smtplib</code> e <code>pyautogui</code> que facilitam esse processo.</p>
+    </section>
 
-  <section id="recursos">
-    <h2>Recursos para Aprender</h2>
-    <ul>
-      <li><a href="https://www.python.org" target="_blank">Site oficial do Python</a></li>
-      <li><a href="https://docs.python.org/3/" target="_blank">Documentação</a></li>
-      <li><a href="https://www.w3schools.com/python/" target="_blank">W3Schools - Python</a></li>
-    </ul>
-  </section>
+    <section id="recursos">
+      <h2>Exemplos de Automação</h2>
+      <ul>
+        <li><a href="https://realpython.com/python-automate-spreadsheets/" target="_blank">Automatizar planilhas</a></li>
+        <li><a href="https://automatetheboringstuff.com/" target="_blank">Automate the Boring Stuff</a></li>
+        <li><a href="https://pypi.org/project/pyautogui/" target="_blank">Automação de tarefas com PyAutoGUI</a></li>
+      </ul>
+    </section>
 
-  <section id="contato">
-    <h2>Contato</h2>
-    <p>Entre em contato pelo email: <a href="mailto:contato@python.com">contato@python.com</a></p>
-  </section>
+    <section id="contato">
+      <h2>Contato</h2>
+      <p>Envie sugestões ou dúvidas para: <a href="mailto:automacao@python.com">automacao@python.com</a></p>
+    </section>
+  </main>
 
   <footer>
-    <p>&copy; 2025 - Site Aprenda Python. Todos os direitos reservados.</p>
+    <p>&copy; 2025 - Automatize com Python. Todos os direitos reservados.</p>
   </footer>
 </body>
 </html>
